# json-key-finder

./: .gitignore  CMakeLists.txt  build.sh  clean_build.sh
include/: findkey.h
src/: findkey.cpp  main.cpp  matcher_scalar.cpp  matcher_scalar.h  matcher_teddy.cpp  matcher_teddy.h  mmap_file.cpp
src/cli/: args.cpp  args.h  reporting.cpp  reporting.h
src/core/: findkey.cpp  findkey_options.cpp  findkey_options.h  prepared_keys.cpp  prepared_keys.h
src/io/: mmap_file.h
src/matchers/: matcher_scalar.cpp  matcher_scalar.h  matcher_teddy.cpp  matcher_teddy.h  matcher_teddy_baseline.cpp  matcher_teddy_baseline.h
src/teddy/: teddy_common.cpp  teddy_common.h  teddy_compile.cpp  teddy_dispatch.h  teddy_grouping.cpp  teddy_grouping.h  teddy_hash.cpp  teddy_hash.h  teddy_suffix.h  teddy_verify.h
tools/: bench_matrix.cpp  bench_matrix.py  gen_keys.cpp  json_input.cpp  json_input.h  key_generation.cpp  key_generation.h  reverse_keys.cpp
tools/bench/: bench_args.cpp  bench_args.h  bench_csv.cpp  bench_csv.h  bench_runner.cpp  bench_runner.h
